--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
 
     
 <div class="login-box">
-  <h2 style="font-size:1.4em; margin:0 0 16px; color:#333;"> Log in to CRM</h2>
+  <h2 style="font-size:1.4em; margin:0 0 12px; color:#333;"> Log in to Harbour CRM</h2>
   <form method="post">
     <input type="text" name="username" placeholder="Username" required>
     <input type="password" name="password" placeholder="Password" required>
@@ -44,6 +44,7 @@
   </div>
 </body>
 </html>
+
 
 
 
