--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -476,7 +476,7 @@ th { background:#f5f5f5; }
     document.getElementById('statusSelect').addEventListener('change', updateSubstatus);
     updateSubstatus(); // run on page load
   </script>
-
+</div>
 
 
 
@@ -938,8 +938,6 @@ function openEditTransactionModal(id) {
 
 </body>
 </html>
-
-
 
 
 
