--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -496,8 +496,8 @@ th { background:#f5f5f5; }
       <option value="viewall">View All Cases →</option>
     </select>
   </div>
-
-
+  </div>
+  </div>
 
 
 
@@ -938,6 +938,7 @@ function openEditTransactionModal(id) {
 
 </body>
 </html>
+
 
 
 
