--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -539,7 +539,7 @@ th { background:#f5f5f5; }
 
         </div>
 
-        
+<h3 style="margin-top:15px;">Transactions History</h3>        
         
 <div class="add-bar-container">
   <form class="add-bar" action="{{ url_for('case.add_transaction') }}" method="post">
@@ -865,6 +865,7 @@ function openEditTransactionModal(id) {
 
 </body>
 </html>
+
 
 
 
