Update print statement from 'Hello' to 'Goodbye'

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -894,9 +894,10 @@ function openEditTransactionModal(id) {
     });
   </script>
 
+{% endif %}   {# ← THIS WAS MISSING THE ENTIRE TIME #}
+
 </body>
 </html>
-
 
 
 
